# java-faas-benchmarks

./: Cargo.toml  README.md
apps/: pom.xml
apps/hello/: pom.xml
apps/hello/src/main/java/: hello.java
apps/mandelbrot/: pom.xml
apps/mandelbrot/src/main/java/: mandelbrot.java
apps/nbody/: pom.xml
apps/nbody/src/main/java/: nbody.java
apps/pidigits/: pom.xml
apps/pidigits/src/main/java/: pidigits.java
apps/simple/: pom.xml
apps/simple/src/main/java/: simple.java
apps/spectralnorm/: pom.xml
src/: lib.rs
