[package]
name = "java-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
jni = { version = "0.19.0", features = [ "invocation" ] }
wasmtime = "1.0.1"
wasmtime-wasi = "1.0.1"
libc = "0.2.134"
errno = "0.2.8"
lazy_static = "1.4.0"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
gag = "1.0.0"
